[gd_scene load_steps=2 format=3 uid="uid://ctnugg3vhb1rj"]

[ext_resource type="Script" path="res://src/ui/battle/battle_ui.gd" id="1_battle_ui"]

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_battle_ui")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.168627, 0.168627, 0.168627, 1)

[node name="EnemyContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 200.0
grow_horizontal = 2
alignment = 1

[node name="AllyContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "VICTORY!"
horizontal_alignment = 1
vertical_alignment = 1
